@@ -1787,6 +1787,30 @@ void init_abort_jobs(
 
       continue;
       }
+     
+    /* code moved to here because even when we're canceling jobs, if there is a 
+     * user epilogue we'll attempt to become the user, so if ji_grpcache is 
+     * NULL then we'll get a crash */
+    if (pj->ji_grpcache == NULL)
+      {
+      DBPRT(("init_abort_jobs: setting grpcache for job %s\n",
+        pj->ji_qs.ji_jobid));
+      
+      if (check_pwd(pj) == NULL)
+        {
+        /* somehow a job that was legally executing (had a password entry)
+         * no longer has a password entry?? */
+        snprintf(log_buffer, sizeof(log_buffer),
+          "job %s no longer has valid password entry - deleting",
+          pj->ji_qs.ji_jobid);
+        
+        log_err(-1, id, log_buffer);
+        
+        mom_deljob(pj);
+
+        continue;
+        }
+      }
 
     /* PW:  mpiexec patch - set the globid so mom does not coredump in response to tm_spawn */
 
@@ -2008,13 +2032,6 @@ void init_abort_jobs(
 
       if (mom_do_poll(pj) && (recover == JOB_RECOV_RUNNING))
         append_link(&mom_polljobs, &pj->ji_jobque, pj);
-
-      if (pj->ji_grpcache == NULL)
-        {
-        DBPRT(("init_abort_jobs: setting grpcache for job %s\n",
-               pj->ji_qs.ji_jobid));
-        check_pwd(pj);
-        }
       }
     }    /* while ((pdirent = readdir(dir)) != NULL) */
 
