@@ -26,6 +26,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - fix so user epilogues are run as user instead of root
   b - fix the prevent pbs_server from hanging when doing server to server job moves.
   b - No longer report a completion code if a job is pre-empted using qrerun. 
+  c - In some rare cases, TORQUE loads a job with no groups. Do not crash in this case.
 
 3.0.2
   c - check if the file pointer to /dev/console can be opened. If not, don't attempt to write it
